class name changes; rework of header block, main menu, about section, object section, articles section

--- a/app/layout/info.html
+++ b/app/layout/info.html
@@ -1,8 +1,10 @@
 
-<div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom"><a class="link">
-    <p class="top">+38(050) 634 71 78</p>
-    <p class="bottom active" href="tel:+380506347178">Заказать звонок</p></a><a class="link">
+<div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom">
+  <div class="link"><a class="top" href="tel:+380506347178">+38(050) 634 71 78</a>
+    <p class="bottom active">Заказать звонок</p>
+  </div><a class="link">
     <svg class="top">
-      <use xlink:href="#apartament"></use>
+      <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
     </svg>
-    <p class="bottom">Выбрать<br>квартиру</p></a></div>
+    <p class="bottom">Выбрать<br>квартиру</p></a>
+</div>
