--- a/app/layout/section-about.html
+++ b/app/layout/section-about.html
@@ -3,50 +3,90 @@
   <div class="grid">
     <h3 class="headline">Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.</h3>
     <h2 class="title">О нас</h2>
-    <div class="slider">
-      <div class="tile">
-        <div class="svg__wrap">
-          <svg>
-            <use xlink:href="#chalice"></use>
+    <!--SLIDER START-->
+    <!--SLIDER BUTTON START-->
+    <svg class="about-slider__prev about-slider__btn">
+      <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+    </svg>
+    <svg class="about-slider__next about-slider__btn">
+      <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+    </svg>
+    <!--SLIDER BUTTON END -->
+    <div class="about-slider">
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#chalice"></use>
           </svg>
         </div>
-        <h3 class="tile__head">Профессионализм</h3>
-        <p class="tile__text">Сочитаем експертность и креативный подход</p>
+        <h3 class="about-tile__head">Профессионализм</h3>
+        <p class="about-tile__text">Сочитаем експертность и креативный подход</p>
       </div>
-      <div class="tile">
-        <div class="svg__wrap">
-          <svg>
-            <use xlink:href="#star"></use>
+      <!-- TILE END-->
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#star"></use>
           </svg>
         </div>
-        <h3 class="tile__head">Качество</h3>
-        <p class="tile__text">Все наши объекты выдержали проверку временем</p>
+        <h3 class="about-tile__head">Качество</h3>
+        <p class="about-tile__text">Все наши объекты выдержали проверку временем</p>
       </div>
-      <div class="tile">
-        <div class="svg__wrap">
-          <svg>
-            <use xlink:href="#briefcase"></use>
+      <!-- TILE END-->
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#briefcase"></use>
           </svg>
         </div>
-        <h3 class="tile__head">Опыт</h3>
-        <p class="tile__text">Спроектировали, построили и управляем 4 объктами.</p>
+        <h3 class="about-tile__head">Опыт</h3>
+        <p class="about-tile__text">Спроектировали, построили и управляем 4 объктами</p>
       </div>
-      <div class="tile">
-        <div class="svg__wrap">
-          <svg>
-            <use xlink:href="#chalice"></use>
+      <!-- TILE END-->
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#handshake"></use>
           </svg>
         </div>
-        <h3 class="tile__head">Профессионализм</h3>
-        <p class="tile__text">Сочитаем експертность и креативный подход</p>
+        <h3 class="about-tile__head">Надежность</h3>
+        <p class="about-tile__text">Наши проекты ликвидные и экономически обоснованные</p>
       </div>
+      <!-- TILE END-->
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#town"></use>
+          </svg>
+        </div>
+        <h3 class="about-tile__head">Комфорт</h3>
+        <p class="about-tile__text">Создаем качественное жилье с современной архитектурой</p>
+      </div>
+      <!-- TILE END-->
+      <!-- TILE START-->
+      <div class="about-tile">
+        <div class="about-tile__icon">
+          <svg class="about-icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#lamp"></use>
+          </svg>
+        </div>
+        <h3 class="about-tile__head">Инновации</h3>
+        <p class="about-tile__text">Используем передовые технологии в проектировании и строительстве</p>
+      </div>
+      <!-- TILE END-->
     </div>
-    <div class="link-wrap"><a class="link sm-button" href="#">
-        <div class="svg-wrap">
-          <svg>
-            <use xlink:href="#arrow"></use>
+    <!--SLIDER END    -->
+    <div class="about-btn"><a class="arrow-btn arrow-btn--dark" href="#about">
+        <div class="arrow-btn__icon">
+          <svg class="icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#play-button"></use>
           </svg>
         </div>
-        <p>Узнать больше</p></a></div>
+        <p class="arrow-btn__text">Смотреть видео</p></a></div>
   </div>
 </div>
