--- a/app/layout/section-apartments.html
+++ b/app/layout/section-apartments.html
@@ -4,14 +4,20 @@
     <div class="head-wrap">
       <h3 class="headline">Только лучшее для амбициозных и успешных</h3>
       <h2 class="title">Квартиры в новостройках</h2>
-    </div>
+    </div><a class="link sm-button sm-button--main" href="#">
+      <div class="svg-wrap">
+        <svg>
+          <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+        </svg>
+      </div>
+      <p>Посмотреть все статьи</p></a>
     <div class="apartments-slider">
       <div class="slide">
         <div class="slide__name">ЖК "Остров"</div>
         <div class="slide__img"><img src="images/object_img1.jpg"/></div>
         <div class="slide__icon">
           <svg>
-            <use xlink:href="#castle"></use>
+            <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
           </svg>
         </div>
         <div class="slide__title">Выразительная архитектура</div>
@@ -22,7 +28,7 @@
         <div class="slide__img"><img src="images/object_img1.jpg"/></div>
         <div class="slide__icon">
           <svg>
-            <use xlink:href="#castle"></use>
+            <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
           </svg>
         </div>
         <div class="slide__title">Транспортная доступность</div>
@@ -33,7 +39,7 @@
         <div class="slide__img"><img src="images/object_img1.jpg"/></div>
         <div class="slide__icon">
           <svg>
-            <use xlink:href="#castle"></use>
+            <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
           </svg>
         </div>
         <div class="slide__title">Развитая ифраструктура </div>
@@ -44,32 +50,10 @@
         <div class="slide__img"><img src="images/object_img1.jpg"/></div>
         <div class="slide__icon">
           <svg>
-            <use xlink:href="#castle"></use>
+            <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
           </svg>
         </div>
         <div class="slide__title">Выразительная архитектура</div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
-      </div>
-      <div class="slide">
-        <div class="slide__name">ЖК "Мирного"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="#castle"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Транспортная доступность</div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
-      </div>
-      <div class="slide">
-        <div class="slide__name">ЖК "Победы"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="#castle"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Развитая ифраструктура </div>
         <div class="slide__link link">Смотреть квартиры объекта</div>
       </div>
     </div>
