--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -2,24 +2,26 @@
 html(lang="en")
     include layout/head.pug
     body
-        include layout/sprite-main.html
-<!-- info popup -->
+        //POPUP START
         include layout/info.pug
-<!-- info popup end -->
-<!-- sidebar____________________________________________ -->
+        //POPUP END
+        
+        //SIDEBAR
         include layout/sidebar.pug
-<!-- sidebar end ________________________________________-->       
-        header#header
-            .header 
-                .header-main
-                    h1 Современное <br> жилье в Полтаве и <br> Миргороде
-                    p.text Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода
+        //SIDEBAR END
 
-                    a.link.sm-button(href="#about")
-                        .svg-wrap
-                            svg
-                                use(xlink:href="#arrow")
-                        p Прокрутить вниз
+        //HEADER START 
+        header#header.header 
+            .header-content
+                h1.header-content__title Современное <br> жилье в Полтаве и <br> Миргороде
+                p.header-content__text Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода
+
+                a.arrow-btn(href="#about")
+                    .arrow-btn__icon
+                        svg.icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                    p.arrow-btn__text Прокрутить вниз
+        //HEADER END
         section#about.about
             include layout/section-about.pug
         section#objects.objects
@@ -30,69 +32,18 @@ html(lang="en")
             include layout/section-apartments.pug
         section#info.contact
             include layout/section-contact.pug
-        footer
-            .container
-                .footer-content.grid
-                    .address
-                        h5 Наши офисы
-                        a(href="#").link.link--footer г.Полтава, ул. А.Кукоби, 12
-                        a(href="#").link.link--footer г.Миргород, ул.Победы,10, оф.1
-                        a(href="#").link.link--footer Время работы: 9:00 – 18:00
-                    .link-logo
-                        a(href="#").link 
-                            svg 
-                                //use(xlink:"")
-                    .contacts
-                        h5 Наши офисы
-                        a(href="mailto:angrobud@gmail.com").link.link--footer  angrobud@gmail.com
-                        a(href="tel=+380509915883").link.link--footer +38(050) 991-58-83
-                        a(href="tel=+380509915883").link.link--footer +38(050) 991-58-82
-                    .newsletter
-                         form(action="")
-                            fieldset
-                                legend Будьте в курсе спецпредложений
-                            .text-wrap
-                                label( for="newsletter") Ваш e-mail
-                                    input#newsletter(type="text")
-                                button.submit Хочу быть в курсе!
-                    a(href="#header").link.sm-button
-                        .svg-wrap
-                            svg
-                                use(xlink:href="#arrow")
-                        p Вверх
-                    .backcall
-                        p Мы предоставляем бесплатные консультации!
-                        a.submit Закажите звонок!
-                    .social
-                        h6 МЫ В СОЦСЕТЯХ
-                        .icon-wrap
-                            a(href="#header").link
-                                .svg-wrap
-                                    svg
-                                        use(xlink:href="#facebook icon")
-                            a(href="#header").link
-                                .svg-wrap
-                                    svg
-                                        use(xlink:href="#telegram")
-                            a(href="#header").link
-                                .svg-wrap
-                                    svg
-                                        use(xlink:href="#insta icon")
-                    p.copyright © 2020. www.angro.com.ua
-                                            
-
-
-
-
-
-<!-- modal -->
+        //FOOTER START
+        footer.footer
+            include layout/footer.pug
+        //FOOTER END
+    
+        <!-- modal -->
         include layout/modal.pug
-<!-- modal end-->                  
-
-            
-<!--build:js js/main.min.js -->
-    script(src="js/libs/jquery.min.js")
-    script(src="js/libs/aos.js")
-    script(src="js/libs/slick.min.js")
-    script(src="js/main.js")
-<!--endbuild-->
+        <!-- modal end-->                  
+        
+        <!--build:js js/main.min.js -->
+        script(src="js/libs/jquery.min.js")
+        script(src="js/libs/aos.js")
+        script(src="js/libs/slick.min.js")
+        script(src="js/main.js")
+        <!--endbuild-->
