--- a/app/pug/layout/info.pug
+++ b/app/pug/layout/info.pug
@@ -4,10 +4,10 @@
         data-aos-easing="linear" 
         data-aos-duration="400"
         data-aos-anchor-placement="bottom")
-    a.link
-        p.top +38(050) 634 71 78
-        p.bottom.active(href="tel:+380506347178") Заказать звонок
+    .link
+        a(href="tel:+380506347178").top +38(050) 634 71 78
+        p.bottom.active Заказать звонок
     a.link
         svg.top
-            use(xlink:href="#apartament")
+            use(xlink:href="images/main-page_icons-sprite.svg#apartament")
         p.bottom Выбрать<br>квартиру
