--- a/app/pug/layout/section-apartments.pug
+++ b/app/pug/layout/section-apartments.pug
@@ -3,6 +3,12 @@
         .head-wrap
             h3.headline Только лучшее для амбициозных и успешных
             h2.title Квартиры в новостройках
+        a.link.sm-button.sm-button--main(href="#")
+            .svg-wrap
+                svg
+                    use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+            p Посмотреть все статьи
+
         .apartments-slider
             .slide
                 .slide__name ЖК "Остров"
@@ -10,7 +16,7 @@
                     img(src="images/object_img1.jpg")
                 .slide__icon
                     svg
-                        use(xlink:href="#castle")
+                        use(xlink:href="images/main-page_icons-sprite.svg#tover")
                 .slide__title Выразительная архитектура
                 .slide__link.link Смотреть квартиры объекта
             .slide
@@ -19,7 +25,7 @@
                     img(src="images/object_img1.jpg")
                 .slide__icon
                     svg
-                        use(xlink:href="#castle")
+                        use(xlink:href="images/main-page_icons-sprite.svg#location")
                 .slide__title Транспортная доступность
                 .slide__link.link Смотреть квартиры объекта
             .slide
@@ -28,7 +34,7 @@
                     img(src="images/object_img1.jpg")
                 .slide__icon
                     svg
-                        use(xlink:href="#castle")
+                        use(xlink:href="images/main-page_icons-sprite.svg#interest-points")
                 .slide__title Развитая ифраструктура 
                 .slide__link.link Смотреть квартиры объекта
             .slide
@@ -37,24 +43,7 @@
                     img(src="images/object_img1.jpg")
                 .slide__icon
                     svg
-                        use(xlink:href="#castle")
+                        use(xlink:href="images/main-page_icons-sprite.svg#tover")
                 .slide__title Выразительная архитектура
                 .slide__link.link Смотреть квартиры объекта
-            .slide
-                .slide__name ЖК "Мирного"
-                .slide__img
-                    img(src="images/object_img1.jpg")
-                .slide__icon
-                    svg
-                        use(xlink:href="#castle")
-                .slide__title Транспортная доступность
-                .slide__link.link Смотреть квартиры объекта
-            .slide
-                .slide__name ЖК "Победы"
-                .slide__img
-                    img(src="images/object_img1.jpg")
-                .slide__icon
-                    svg
-                        use(xlink:href="#castle")
-                .slide__title Развитая ифраструктура 
-                .slide__link.link Смотреть квартиры объекта
+        
