--- a/app/pug/layout/section-articles.pug
+++ b/app/pug/layout/section-articles.pug
@@ -1,23 +1,50 @@
-.bg__animate
-    .bg__img
-        img(src="images/acticlebg1.jpg")
-    .bg__img
-        img(src="images/acticlebg2.jpg")
-
-.container
-    .grid
-        h3.headline Строительство жилых домов сопряжено со множеством проблем.
-        h2.title Статьи
-        .articles__content
-            .article
-                h4.article__titile ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
-                p.article__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...
-            .article
-                h4.article__titile ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
-                p.article__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...
-        a.link.sm-button(href="#")
-            .svg-wrap
-                svg
-                    use(xlink:href="#arrow")
-            p Посмотреть все статьи
-
+//SLIDER START
+.articles-slider
+    .articles-tile
+        img.articles-tile__img(src="images/articles/articles1.jpg")
+        .container
+            .grid   
+                a(href="#").articles-tile__title ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.articles-tile__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...      
+            
+    .articles-tile
+        img.articles-tile__img(src="images/articles/articles2.jpg")
+        .container
+            .grid
+                a(href="#").articles-tile__title ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.articles-tile__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...      
+    .articles-tile
+        img.articles-tile__img(src="images/articles/articles3.jpg")
+        .container
+            .grid
+                a(href="#").articles-tile__title ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.articles-tile__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...      
+    .articles-tile
+        img.articles-tile__img(src="images/articles/articles4.jpg")
+        .container
+            .grid
+                a(href="#").articles-tile__title ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.articles-tile__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...      
+    .articles-tile
+        img.articles-tile__img(src="images/articles/articles5.jpg")
+        .container
+            .grid
+                a(href="#").articles-tile__title ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.articles-tile__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...      
+//SLIDER END
+//ARTICLES START       
+.articles-content   
+    .container
+        //SLIDER BUTTON START
+        svg.articles-slider__icon
+            use(xlink:href="images/main-page_icons-sprite.svg#arrow") 
+        //SLIDER BUTTON END
+        .grid 
+            h3.headline Строительство жилых домов сопряжено со множеством проблем.
+            h2.title Статьи
+            a.arrow-btn.arrow-btn--left(href="#")
+                .arrow-btn__icon
+                    svg.icon
+                        use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                p.arrow-btn__text Посмотреть квартиры объекта
+//ARTICLES END
