--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -6,6 +6,7 @@
 @import "layout/_general";
 @import "layout/_fonts";
 @import "layout/_WP";
+@import "layout/_typography";
 // Page styles
 @import "modules/_header";
 @import "modules/_main";
