--- a/app/pug/layout/section-objects.pug
+++ b/app/pug/layout/section-objects.pug
@@ -1,70 +1,77 @@
 .container
+    //SLIDER BUTTON START
+    svg.objects-slider__icon
+        use(xlink:href="images/main-page_icons-sprite.svg#arrow") 
+    //SLIDER BUTTON END 
     .objects-slider
-        .objects-content
-            .slide
-                .text 
-                    h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-                    h2.title Наши объекты
-                    h4.text__headline ЖК "На Сенной"
-                    p.text__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
-                    .link-wrap
-                        a.link.sm-button(href="#")
-                            .svg-wrap
-                                svg
-                                    use(xlink:href="#arrow")
-                            p Посмотреть квартиры объекта
-                        a.link.sm-button(href="#")
-                            .svg-wrap
-                                svg
-                                    use(xlink:href="#arrow")
-                            p Посмотреть все объекты
-                .image__wrap
-                    img(src="images/object_img1.jpg")
-                    .icon_wrap
-                        a.link
-                            p Детсад
-                            svg
-                                use(xlink:href="#puzzle")       
-                        a.link
-                            p Школа
-                            svg
-                                use(xlink:href="#castle")  
-                        a.link
-                            p Парк
-                            svg
-                                use(xlink:href="#park")
-        .objects-content
-            .slide
-                .text 
-                    h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-                    h2.title Наши объекты
-                    h4.text__headline ЖК "На Сенной"
-                    p.text__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
-                    .link-wrap
-                        a.link.sm-button(href="#")
-                            .svg-wrap
-                                svg
-                                    use(xlink:href="#arrow")
-                            p Посмотреть квартиры объекта
-                        a.link.sm-button(href="#")
-                            .svg-wrap
-                                svg
-                                    use(xlink:href="#arrow")
-                            p Посмотреть все объекты
-                .image__wrap
-                    img(src="images/object_img1.jpg")
-                    .icon_wrap
-                        a.link
-                            p Детсад
-                            svg
-                                use(xlink:href="#puzzle")       
-                        a.link
-                            p Школа
-                            svg
-                                use(xlink:href="#castle")  
-                        a.link
-                            p Парк
-                            svg
-                                use(xlink:href="#park")
+        // TILE START
+        .objects-tile 
+            .objects-tile__info 
+                h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                h2.title Наши объекты
+                a.objects-tile__headline.link--active(href="#") ЖК "На Сенной"
+                p.objects-tile__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
+                .objects-tile__links
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть квартиры объекта
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть все объекты
+            .objects-tile__illustration
+                img.objects-tile__img(src="images/object_img1.jpg")
+                .objects-tile__icons
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Детсад
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#puzzle")       
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Школа
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#castle")  
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Парк
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#park")
+        //TILE END
+        //TILE STRAT
+        .objects-tile
+            .objects-tile__info 
+                h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                h2.title Наши объекты
+                a.objects-tile__headline.link--active(href="#") ЖК "На Сенной"
+                p.objects-tile__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
+                .objects-tile__links
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть квартиры объекта
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть все объекты
+            .objects-tile__illustration
+                img.objects-tile__img(src="images/object_img1.jpg")
+                .objects-tile__icons
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Детсад
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#puzzle")       
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Школа
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#castle")  
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Парк
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#park")
+        //TILE END
+        
                             
 
